using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Scripts
{
    internal class AnimationStrings
    {
        internal static string isMoving = "isMoving";
        internal static string isGrounded = "isGrounded";
        internal static string jump = "jump";
        internal static string yVelocity = "yVelocity";
        internal static string isAlive = "isAlive";
        internal static string isOnWall = "isOnWall";
        internal static string isOnCeiling = "isOnCeiling";
    }

}
